# docker-fullstack-demo

./: README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env  Dockerfile  app.py  pyproject.toml
frontend/: Dockerfile  nginx.conf  package-lock.json
nginx/: nginx.conf
