[tool.poetry]
name = "quotes-api"
version = "0.1.0"
description = ""
authors = ["nevilleomangi <31406314+nevilleomangi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
SQLAlchemy = ">=1.4,<1.4.23"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.0"
marshmallow = "^3.13.0"
marshmallow-sqlalchemy = "^0.26.1"
flask-marshmallow = "^0.14.0"
psycopg2 = "^2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
